tests/compiler/expected/output/PointerTypeError.shtk.txt
MODULE PointerTypeError.shtk
ERROR in Line 5 Col 20

    var b:int[] <- a
                   ^
Type error, did not expect int*,
expected int[]
